--- a/LibraryMangement/LibraryMangement.csproj
+++ b/LibraryMangement/LibraryMangement.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.1" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="Views\Author\Create.cshtml">
